// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createMySQLInstanceEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": Array [],
          "availabilityType": "ZONAL",
          "backupConfiguration": Object {
            "backupRetentionSettings": Object {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": Object {
            "authorizedNetworks": Array [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": Object {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": Object {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "localInfile": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
  "skipShowDatabase": undefined,
}
`;

exports[`#createMySQLInstanceEntity should convert to entity with localInfile param set to off 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "databaseFlags": Array [
            Object {
              "name": "local_infile",
              "value": "off",
            },
          ],
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "localInfile": "off",
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
  "skipShowDatabase": undefined,
}
`;

exports[`#createMySQLInstanceEntity should convert to entity with requireSSL param set to true 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "ipConfiguration": Object {
            "requireSsl": true,
          },
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "localInfile": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": true,
  "skipShowDatabase": undefined,
}
`;

exports[`#createMySQLInstanceEntity should parse/store the ip addresses values 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "MYSQL_5_7",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [
          Object {
            "ipAddress": "1.2.3.4",
            "type": "PRIMARY",
          },
          Object {
            "ipAddress": "10.0.0.1",
            "type": "PRIVATE",
          },
          Object {
            "ipAddress": "20.0.0.1",
            "type": "OUTGOING",
          },
        ],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": Array [],
          "availabilityType": "ZONAL",
          "backupConfiguration": Object {
            "backupRetentionSettings": Object {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": Object {
            "authorizedNetworks": Array [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": Object {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": Object {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_mysql_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": true,
  "ipAddresses": Array [
    "1.2.3.4",
    "10.0.0.1",
    "20.0.0.1",
  ],
  "kmsKeyName": undefined,
  "localInfile": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": Array [
    "20.0.0.1",
  ],
  "primaryIpAddresses": Array [
    "1.2.3.4",
  ],
  "privateIpAddresses": Array [
    "10.0.0.1",
  ],
  "requireSSL": undefined,
  "skipShowDatabase": undefined,
}
`;

exports[`#createPostgresInstanceEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "POSTGRES_12",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": Array [],
          "availabilityType": "ZONAL",
          "backupConfiguration": Object {
            "backupRetentionSettings": Object {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": Object {
            "authorizedNetworks": Array [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": Object {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": Object {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": undefined,
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
}
`;

exports[`#createPostgresInstanceEntity should convert to entity with logCheckpoints param set to off 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "POSTGRES_12",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "databaseFlags": Array [
            Object {
              "name": "log_checkpoints",
              "value": "off",
            },
          ],
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": "off",
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "requireSSL": undefined,
}
`;

exports[`#createPostgresInstanceEntity should parse/store the ip addresses values 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "POSTGRES_12",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [
          Object {
            "ipAddress": "1.2.3.4",
            "type": "PRIMARY",
          },
          Object {
            "ipAddress": "10.0.0.1",
            "type": "PRIVATE",
          },
          Object {
            "ipAddress": "20.0.0.1",
            "type": "OUTGOING",
          },
        ],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": Array [],
          "availabilityType": "ZONAL",
          "backupConfiguration": Object {
            "backupRetentionSettings": Object {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": Object {
            "authorizedNetworks": Array [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": Object {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": Object {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": true,
  "ipAddresses": Array [
    "1.2.3.4",
    "10.0.0.1",
    "20.0.0.1",
  ],
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": undefined,
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": Array [
    "20.0.0.1",
  ],
  "primaryIpAddresses": Array [
    "1.2.3.4",
  ],
  "privateIpAddresses": Array [
    "10.0.0.1",
  ],
  "requireSSL": undefined,
}
`;

exports[`#createSQLServerInstanceEntity should convert to entity 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "SQLSERVER_2017_STANDARD",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": Array [],
          "availabilityType": "ZONAL",
          "backupConfiguration": Object {
            "backupRetentionSettings": Object {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": Object {
            "authorizedNetworks": Array [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": Object {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": Object {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_sql_server_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "containedDatabaseAuthentication": undefined,
  "createdOn": undefined,
  "crossDatabaseOwnershipChaining": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "externalScriptsEnabled": undefined,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "remoteAccess": undefined,
  "requireSSL": undefined,
  "traceFlag": undefined,
  "userConnections": undefined,
  "userOptions": undefined,
}
`;

exports[`#createSQLServerInstanceEntity should convert to entity with crossDbOwnershipChaining param set to on 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "SQLSERVER_2017_STANDARD",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "databaseFlags": Array [
            Object {
              "name": "cross db ownership chaining",
              "value": "on",
            },
          ],
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_sql_server_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": undefined,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "containedDatabaseAuthentication": undefined,
  "createdOn": undefined,
  "crossDatabaseOwnershipChaining": "on",
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "externalScriptsEnabled": undefined,
  "hasPublicIP": false,
  "ipAddresses": undefined,
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": undefined,
  "primaryIpAddresses": undefined,
  "privateIpAddresses": undefined,
  "remoteAccess": undefined,
  "requireSSL": undefined,
  "traceFlag": undefined,
  "userConnections": undefined,
  "userOptions": undefined,
}
`;

exports[`#createSQLServerInstanceEntity should parse/store the ip addresses values 1`] = `
Object {
  "_class": Array [
    "Database",
  ],
  "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
  "_rawData": Array [
    Object {
      "name": "default",
      "rawData": Object {
        "backendType": "SECOND_GEN",
        "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
        "databaseVersion": "SQLSERVER_2017_STANDARD",
        "etag": "98de3deaeeca4420e21a891488c187b0b029235e2e0cb551fc00a388d1ac4f7d",
        "gceZone": "europe-west3-b",
        "instanceType": "CLOUD_SQL_INSTANCE",
        "ipAddresses": Array [
          Object {
            "ipAddress": "1.2.3.4",
            "type": "PRIMARY",
          },
          Object {
            "ipAddress": "10.0.0.1",
            "type": "PRIVATE",
          },
          Object {
            "ipAddress": "20.0.0.1",
            "type": "OUTGOING",
          },
        ],
        "kind": "sql#instance",
        "name": "cloud-sql-postgres",
        "project": "j1-gc-integration-dev-v2",
        "region": "europe-west3",
        "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v2/instances/cloud-sql-postgres",
        "serviceAccountEmailAddress": "p165882964161-x5ifig@gcp-sa-cloud-sql.iam.gserviceaccount.com",
        "settings": Object {
          "activationPolicy": "ALWAYS",
          "authorizedGaeApplications": Array [],
          "availabilityType": "ZONAL",
          "backupConfiguration": Object {
            "backupRetentionSettings": Object {
              "retainedBackups": 7,
              "retentionUnit": "COUNT",
            },
            "enabled": true,
            "kind": "sql#backupConfiguration",
            "location": "eu",
            "pointInTimeRecoveryEnabled": true,
            "replicationLogArchivingEnabled": true,
            "startTime": "06:00",
            "transactionLogRetentionDays": 7,
          },
          "dataDiskSizeGb": "10",
          "dataDiskType": "PD_SSD",
          "ipConfiguration": Object {
            "authorizedNetworks": Array [],
            "ipv4Enabled": true,
          },
          "kind": "sql#settings",
          "locationPreference": Object {
            "kind": "sql#locationPreference",
            "zone": "europe-west3-b",
          },
          "maintenanceWindow": Object {
            "day": 0,
            "hour": 0,
            "kind": "sql#maintenanceWindow",
          },
          "pricingPlan": "PER_USE",
          "settingsVersion": "19",
          "storageAutoResize": true,
          "storageAutoResizeLimit": "0",
          "tier": "db-custom-1-3840",
        },
        "state": "RUNNABLE",
      },
    },
  ],
  "_type": "google_sql_postgres_instance",
  "authorizedNetworks": Array [],
  "automatedBackupsEnabled": true,
  "connectionName": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "createdOn": undefined,
  "displayName": "cloud-sql-postgres",
  "encrypted": true,
  "hasPublicIP": true,
  "ipAddresses": Array [
    "1.2.3.4",
    "10.0.0.1",
    "20.0.0.1",
  ],
  "kmsKeyName": undefined,
  "location": "j1-gc-integration-dev-v2:europe-west3:cloud-sql-postgres",
  "logCheckpoints": undefined,
  "logConnections": undefined,
  "logDisconnections": undefined,
  "logDuration": undefined,
  "logErrorVerbosity": undefined,
  "logExecutorStats": undefined,
  "logHostname": undefined,
  "logLockWaits": undefined,
  "logMinDurationStatement": undefined,
  "logMinErrorStatement": undefined,
  "logMinMessages": undefined,
  "logParserStats": undefined,
  "logPlannerStats": undefined,
  "logStatement": undefined,
  "logStatementStats": undefined,
  "logTempFiles": undefined,
  "name": "cloud-sql-postgres",
  "outgoingIpAddresses": Array [
    "20.0.0.1",
  ],
  "primaryIpAddresses": Array [
    "1.2.3.4",
  ],
  "privateIpAddresses": Array [
    "10.0.0.1",
  ],
  "requireSSL": undefined,
}
`;
